# SmartHome

./: README.md
MatterHome/: CMakeLists.txt  prj.conf  prj_no_dfu.conf  prj_release.conf  sample.yaml
MatterHome/privatenet/: Readme.rd
MatterHome/privatenet/src/: main.c
MatterHome/src/: app_task.cpp  app_task.h  readme.rst  template.matter  template.zap
OldVersion/: readme.rst
OldVersion/privatenet/: CMakeLists.txt  prj.conf  readme.rst
OldVersion/privatenet/src/: Readme.rst  main.c
OldVersion/src/: Readme.rst  main.c
SmartHomeClassic/: CMakeLists.txt  Readme.rst  prj.conf
SmartHomeClassic/privatenet/: Readme.rst
SmartHomeClassic/privatenet/src/: Readme.rst  main.c
SmartHomeClassic/src/: Readme.rst  main.c
